# SnakeAI-MLOps

./: .gitignore  CMakeLists.txt  CMakePresets.json  KT.md  ML.md  README.md  index.html  leaderboard.json  vcpkg.json
.github/workflows/: ci.yml
docker/: Dockerfile
src/: AgentSelection.cpp  AgentSelection.hpp  Apple.cpp  Apple.hpp  DataCollector.cpp  DataCollector.hpp  Game.cpp  Game.hpp  GameState.hpp  Grid.cpp  Grid.hpp  HowToPlay.cpp  HowToPlay.hpp  InputManager.cpp  InputManager.hpp  Leaderboard.cpp  Leaderboard.hpp  MLAgents.cpp  MLAgents.hpp  Menu.cpp  Menu.hpp  ModelDebugger.cpp  ModelVerification.cpp  PauseMenu.cpp  PauseMenu.hpp  QLearningAgent.cpp  QLearningAgent.hpp  Settings.cpp  Settings.hpp  Snake.cpp  Snake.hpp  StatsGallery.cpp  StatsGallery.hpp  TorchInference.cpp  TorchInference.hpp  UnifiedDataCollector.cpp  UnifiedDataCollector.hpp  actor_critic_trainer.py  build_and_debug.bat  convert_models_to_torchscript.py  (+16 more)
